<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">
    <TextView
        android:id="@+id/dt_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingEnd="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textColor="@color/gray"/>
    <TextView
        android:id="@+id/dt_value"
        app:layout_constraintTop_toTopOf="@id/dt_title"
        app:layout_constraintStart_toEndOf="@id/dt_title"
        android:paddingEnd="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="@color/white"/>
    <TextView
        android:id="@+id/pss_title"
        app:layout_constraintTop_toTopOf="@id/dt_title"
        app:layout_constraintStart_toEndOf="@id/dt_value"
        android:paddingEnd="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pss"
        android:textColor="@color/gray"/>
    <TextView
        android:id="@+id/pss_value"
        app:layout_constraintTop_toTopOf="@id/dt_title"
        app:layout_constraintStart_toEndOf="@id/pss_title"
        android:paddingEnd="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="@color/pss"/>
    <TextView
        android:id="@+id/hrss_title"
        app:layout_constraintTop_toTopOf="@id/dt_title"
        app:layout_constraintStart_toEndOf="@id/pss_value"
        android:paddingEnd="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hrss"
        android:textColor="@color/gray"/>
    <TextView
        android:id="@+id/hrss_value"
        app:layout_constraintTop_toTopOf="@id/dt_title"
        app:layout_constraintStart_toEndOf="@id/hrss_title"
        android:paddingEnd="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="@color/pss"/>
    <TextView
        android:id="@+id/fit_title"
        app:layout_constraintTop_toBottomOf="@id/dt_title"
        app:layout_constraintStart_toStartOf="@id/dt_title"
        android:paddingEnd="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fitness"
        android:textColor="@color/gray"/>
    <TextView
        android:id="@+id/fit_value"
        app:layout_constraintTop_toTopOf="@id/fit_title"
        app:layout_constraintStart_toEndOf="@id/fit_title"
        android:paddingEnd="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="@color/fitness"/>
    <TextView
        android:id="@+id/fat_title"
        app:layout_constraintTop_toTopOf="@id/fit_title"
        app:layout_constraintStart_toEndOf="@id/fit_value"
        android:paddingEnd="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fatigue"
        android:textColor="@color/gray"/>
    <TextView
        android:id="@+id/fat_value"
        app:layout_constraintTop_toTopOf="@id/fit_title"
        app:layout_constraintStart_toEndOf="@id/fat_title"
        android:paddingEnd="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="@color/fatigue"/>
    <TextView
        android:id="@+id/form_title"
        app:layout_constraintTop_toTopOf="@id/fit_title"
        app:layout_constraintStart_toEndOf="@id/fat_value"
        android:paddingEnd="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/form"
        android:textColor="@color/gray"/>
    <TextView
        android:id="@+id/form_value"
        app:layout_constraintTop_toTopOf="@id/fit_title"
        app:layout_constraintStart_toEndOf="@id/form_title"
        android:paddingEnd="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="@color/form"/>
    <TextView
        android:id="@+id/activity_details"
        app:layout_constraintTop_toBottomOf="@id/fit_title"
        app:layout_constraintStart_toStartOf="@id/fit_title"
        app:layout_constraintStart_toEndOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="@color/gray"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>